--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,22 +11,25 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+    
+    - name: Make gradlew executable
+      run: chmod +x InternAssessmentApp/gradlew
+      working-directory: ./
       
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug || gradle assembleDebug
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug --stacktrace
+      working-directory: ./InternAssessmentApp
       
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: samsung-Assesment
-        path: app/build/outputs/apk/debug/samsung-Assesment-debug.apk
+        path: InternAssessmentApp/app/build/outputs/apk/debug/samsung-Assesment-debug.apk
