--- a/InternAssessmentApp/app/.gitignore
+++ b/InternAssessmentApp/app/.gitignore
@@ -1,40 +1,1 @@
-# Built application files
-*.apk
-*.ap_
-*.aab
-
-# Files for the ART/Dalvik VM
-*.dex
-
-# Java class files
-*.class
-
-# Generated files
-bin/
-gen/
-out/
-release/
-
-# Gradle files
-.gradle/
-build/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Android Studio
-*.iml
-.idea/
-.DS_Store
-/captures
-.externalNativeBuild
-.cxx
-
-# BUT KEEP THESE - DO NOT IGNORE:
-# settings.gradle
-# settings.gradle.kts
-# build.gradle
-# build.gradle.kts
-# gradlew
-# gradlew.bat
-# gradle/wrapper/
+/build
