--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,6 +6,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,18 +29,22 @@ jobs:
     - name: Build Debug APK
       run: ./gradlew assembleDebug --stacktrace
       working-directory: ./InternAssessmentApp
+    
+    
+    - name: List APK files
+      run: find InternAssessmentApp/app/build/outputs/apk -type f
       
     - name: Upload APK to Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: samsung-assessment-app
-        path: InternAssessmentApp/app/build/outputs/apk/debug/samsung-Assessment-debug.apk
+        path: InternAssessmentApp/app/build/outputs/apk/debug/*.apk
     
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        files: InternAssessmentApp/app/build/outputs/apk/debug/samsung-Assessment-debug.apk
+        files: InternAssessmentApp/app/build/outputs/apk/debug/*.apk
         generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
